force-app/main/default/objects/SBQQ__SearchFilter__c/fields/SBQQ__Action__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Action__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Action to which this filter applies. Blank value means the filter is global.</description>
        <inlineHelpText>Action to which this filter applies. Blank value means the filter is global.</inlineHelpText>
        <label>Action</label>
        <referenceTo>SBQQ__CustomAction__c</referenceTo>
        <relationshipLabel>Search Filters</relationshipLabel>
        <relationshipName>SearchFilters</relationshipName>
        <type>Lookup</type>
    </CustomField>