force-app/main/default/objects/SBQQ__SearchFilter__c/fields/SBQQ__DisplayOrder__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__DisplayOrder__c</fullName>
        <description>Order in which this filter is displayed in the UI.</description>
        <inlineHelpText>Order in which this filter is displayed in the UI.</inlineHelpText>
        <label>Display Order</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>