force-app/main/default/objects/SBQQ__SearchFilter__c/fields/SBQQ__FilterSourceField__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__FilterSourceField__c</fullName>
        <description>Field that sources value for use in filtering.</description>
        <inlineHelpText>Field that sources value for use in filtering.</inlineHelpText>
        <label>Filter Source Field</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>SBQQ__FilterSourceObject__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Type</fullName>
                </value>
                <value>
                    <fullName>Status</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>