force-app/main/default/objects/SBQQ__SearchFilter__c/fields/SBQQ__FilterSourceObject__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__FilterSourceObject__c</fullName>
        <description>Object that sources value for use in filtering.</description>
        <inlineHelpText>Object that sources value for use in filtering.</inlineHelpText>
        <label>Filter Source Object</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Quote</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>