force-app/main/default/objects/SBQQ__SearchFilter__c/fields/SBQQ__FilterValue__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__FilterValue__c</fullName>
        <description>Static value used in filtering.</description>
        <inlineHelpText>Static value used in filtering.</inlineHelpText>
        <label>Filter Value</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>