force-app/main/default/objects/SBQQ__SearchFilter__c/fields/SBQQ__Hidden__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Hidden__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that marks this filter as hidden. Hidden filters do not display in the UI but contribute to search queries.</description>
        <inlineHelpText>Select the checkbox to mark this filter as hidden. Hidden filters do not display in the UI but contribute to search queries.</inlineHelpText>
        <label>Hidden</label>
        <type>Checkbox</type>
    </CustomField>