force-app/main/default/objects/SBQQ__SearchFilter__c/fields/SBQQ__HiddenSourceObject__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__HiddenSourceObject__c</fullName>
        <description>Object that sources value for use in determining whether the filter is hidden.</description>
        <inlineHelpText>Specify object that sources value for use in determining whether the filter is hidden.</inlineHelpText>
        <label>Hidden Source Object</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Quote</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>