force-app/main/default/objects/SBQQ__SearchFilter__c/fields/SBQQ__Operator__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Operator__c</fullName>
        <description>Operator used by this filter to determine whether filter value is matched.</description>
        <inlineHelpText>Specify the operator to use with this filter.</inlineHelpText>
        <label>Operator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>equals</fullName>
                </value>
                <value>
                    <fullName>not equals</fullName>
                </value>
                <value>
                    <fullName>less than</fullName>
                </value>
                <value>
                    <fullName>less or equals</fullName>
                </value>
                <value>
                    <fullName>greater than</fullName>
                </value>
                <value>
                    <fullName>greater or equals</fullName>
                </value>
                <value>
                    <fullName>starts with</fullName>
                </value>
                <value>
                    <fullName>ends with</fullName>
                </value>
                <value>
                    <fullName>contains</fullName>
                </value>
                <value>
                    <fullName>between</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>