force-app/main/default/objects/SBQQ__SearchFilter__c/fields/SBQQ__TargetObject__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__TargetObject__c</fullName>
        <description>Object searched by this filter.</description>
        <inlineHelpText>Specify object to search.</inlineHelpText>
        <label>Target Object</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Asset</fullName>
                </value>
                <value>
                    <fullName>Subscription</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>