force-app/main/default/objects/SBQQ__SearchFilter__c/validationRules/SBQQ__Require_filter_object_for_filter_field.validationRule-meta.xml
<ValidationRule>
        <fullName>SBQQ__Require_filter_object_for_filter_field</fullName>
        <active>true</active>
        <description>Require filter source object is selected when filter source field is not blank.</description>
        <errorConditionFormula>AND(ISPICKVAL(SBQQ__FilterSourceObject__c, &#39;&#39;),NOT(ISPICKVAL(SBQQ__FilterSourceField__c, &#39;&#39;)))</errorConditionFormula>
        <errorMessage>You must select Filter Source Object when Filter Source Field is selected.</errorMessage>
    </ValidationRule>