force-app/main/default/objects/SBQQ__SearchFilter__c/validationRules/SBQQ__Require_hidden_object_for_hidden_field.validationRule-meta.xml
<ValidationRule>
        <fullName>SBQQ__Require_hidden_object_for_hidden_field</fullName>
        <active>true</active>
        <description>Require hidden source object is selected when hidden source field is not blank.</description>
        <errorConditionFormula>AND(ISPICKVAL(SBQQ__HiddenSourceObject__c, &#39;&#39;),NOT(ISPICKVAL(SBQQ__HiddenSourceField__c, &#39;&#39;)))</errorConditionFormula>
        <errorMessage>You must select Hidden Source Object when Hidden Source Field is selected.</errorMessage>
    </ValidationRule>