force-app/main/default/objects/SBQQ__SearchFilter__c/listViews/SBQQ__All.listView-meta.xml
<ListView>
        <fullName>SBQQ__All</fullName>
        <columns>NAME</columns>
        <columns>SBQQ__DisplayOrder__c</columns>
        <columns>SBQQ__TargetObject__c</columns>
        <columns>SBQQ__TargetField__c</columns>
        <columns>SBQQ__Operator__c</columns>
        <columns>SBQQ__FilterValue__c</columns>
        <columns>SBQQ__Hidden__c</columns>
        <columns>SBQQ__HiddenSourceField__c</columns>
        <columns>SBQQ__FilterSourceField__c</columns>
        <columns>SBQQ__Action__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </ListView>